# archetype-adk

./: .env.example  .gitignore  README.md  archetype.md  conftest.py  pyproject.toml
domain_agent/: agent.py  callbacks.py  prompt.py  tools.py
tests/: orders.test.json  test_eval.py
